zadanie z lekcji (poprawiona wersja)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>You can read about it!</h2>
     <hr/>
     <p>
-    <strong>Ice cream</strong> brownie pudding tiramisu pie. Carrot cake topping chocolate cake liquorice sweet soufflé croissant. Cheesecake cheesecake jelly-o candy canes cookie apple pie jujubes. Candy canes pudding caramels biscuit tootsie roll candy. Donut candy donut caramels cake. Bonbon jelly-o chocolate cake caramels bear claw pie chocolate cake donut pastry.
+    <strong>Ice cream</strong> brownie pudding tiramisu pie. Carrot cake topping <strong>chocolate</strong> cake liquorice sweet soufflé croissant. Cheesecake cheesecake jelly-o candy canes cookie apple pie jujubes. Candy canes pudding caramels biscuit tootsie roll candy. Donut candy donut caramels cake.<i> Bonbon jelly-o chocolate cake caramels bear claw pie chocolate cake donut pastry.</i>
     </br></br>
     Read more >
     <br/><br/>
