--- a/index.html
+++ b/index.html
@@ -3,41 +3,246 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nazwa robocza</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1> This page is with sweets</h1>
-    <h2>You can read about it!</h2>
-    <hr/>
-    <p>
-    <strong>Ice cream</strong> brownie pudding tiramisu pie. Carrot cake topping <strong>chocolate</strong> cake liquorice sweet soufflé croissant. Cheesecake cheesecake jelly-o candy canes cookie apple pie jujubes. Candy canes pudding caramels biscuit tootsie roll candy. Donut candy donut caramels cake.<i> Bonbon jelly-o chocolate cake caramels bear claw pie chocolate cake donut pastry.</i>
-    </br></br>
-    Read more >
-    <br/><br/>
-    <u>Updated 2017-08-07</u>
-</p>
-<h2>Choose your favorite sweets</h2>
-    <ul>
-        <li>cupcake</li>
-        <li>chocolate</li>
-        <li>lollipop</li>
-        <li>gummies</li>
-        <li>another gummies</li>
-        <li>crossant</li>
-    </ul>
-    <h2>Structure in our company</h2>
-    <ol>
-        <li>John Sweet, Owner</li>
-        <ul><li>all things related with doing bussines</li></ul>
-        <li>Madlaine Kowalski, Marketing</li>
-        <ul><li>all things related with marketing</li></ul>
-        <li>Paul Markov, Sales</li>
-        <ul><li>Meet with clients</li></ul>
-        <li>Granda Basia, Cook & Master ofDesign</li>
+    <div class="container">
+    <nav class="topNav">
+        <div class="logo"><img src="./assets/logo.png" alt="company logo" /></div>
         <ul>
-            <li>Cooking</li>
-            <li>Prepare new recipies</li>
+            <a href="#home" style="color:rgb(16,201,195)">
+                <li class="navItem">HOME</li>
+            </a>
+            <a href="#about">
+                <li class="navItem">ABOUT</li>
+            </a>
+            <a href="#work">
+                <li class="navItem">WORK</li>
+            </a>
+            <a href="#process">
+                <li class="navItem">PROCESS</li>
+            </a>
+            <a href="#services">
+                <li class="navItem">SERVICES</li>
+            </a>
+            <a href="#testimonials">
+                <li class="navItem">TESTIMONIALS</li>
+            </a>
+            <a href="#contact">
+                <li class="navItem">CONTACT</li>
+            </a>
         </ul>
-    </ol>
+    </nav>
+    <main>
+        <section id="home" class="firstSection">
+        <aside class="halfSection">
+            <h1>We Design and Develop</h1>
+            <p>We are a new design studio based in USA. We have over 20 years of combined expirience, and know a thing or two about designing websites and mobile apps</p>
+            <a href="#contact"><button>CONTACT US</button></a>
+        </aside>
+        </section>
+        <section id="about" class="secondSection">
+            <h1> About Us </h1>
+            <p>Divide have don't man wherein air fourth. Own itself make have night won't make.
+                A you under Seed appear which good give. Own give air without fowl moveth dry first
+                heaven fruit, dominion she'd won't very all.
+            </p>
+            <img src="./assets/signature.png" alt="">
+        </section>
+        <section class="thirdSection">
+            <aside>
+                <h1>Professional Skills</h1>
+                <div class="progressBars">
+                    <div class="progressTitle">UI/UX DESIGN 75%</div>
+                    <div class="progressBar">
+                      <div class="progress" style="width:75%;"></div>
+                    </div>
+                    <div class="progressTitle">WEB DEVELOPMENT 90%</div>
+                    <div class="progressBar">
+                        <div class="progress" style="width:90%;"></div>
+                    </div>
+                    <div class="progressTitle">MARKETING 65%</div>
+                    <div class="progressBar">
+                        <div class="progress" style="width:65%"></div>
+                    </div>
+                  </div>
+
+            </aside>
+
+            <footer class="numbers" style="width:100%;">
+                <div class="numContainer">
+                    <div>
+                        <img src="./assets/portfolio.png" alt="Portfolio icon">
+                    </div>
+                    <div style="padding-left:15px">
+                        <strong>548</strong>
+                        <p>Projects completed</p>
+                    </div>
+                </div>
+
+                <div class="numContainer">
+                    <div>
+                        <img src="./assets/clock.png" alt="Clock icon">
+                    </div>
+                    <div style="padding-left:15px">
+                        <strong>1465</strong>
+                        <p>Working hours</p>
+                    </div>
+                </div>
+
+                <div class="numContainer">
+                    <div>
+                        <img src="./assets/star.png" alt="Star icon">
+                    </div>
+                    <div style="padding-left:15px">
+                        <strong>612</strong>
+                        <p>Positive feedbacks</p>
+                    </div>
+                </div>
+
+                <div class="numContainer">
+                    <div>
+                        <img src="./assets/like.png" alt="Like icon">
+                    </div>
+                    <div style="padding-left:15px">
+                        <strong>735</strong>
+                        <p>Happy clients</p>
+                    </div>
+                </div>
+            </footer>
+        </section>
+
+        <section id="work" class="fourthSection">
+            <img src="../assets/341077514_958021545557266_4480056475019198074_n.jpg" alt="">
+            <img src="../assets/341077514_958021545557266_4480056475019198074_n.jpg" alt="">
+            <img src="../assets/341077514_958021545557266_4480056475019198074_n.jpg" alt="">
+            <img src="../assets/341077514_958021545557266_4480056475019198074_n.jpg" alt="">
+            <img src="../assets/341077514_958021545557266_4480056475019198074_n.jpg" alt="">
+            <img src="../assets/341077514_958021545557266_4480056475019198074_n.jpg" alt="">
+            <img src="../assets/341077514_958021545557266_4480056475019198074_n.jpg" alt="">
+            <img src="../assets/341077514_958021545557266_4480056475019198074_n.jpg" alt="">
+            <header>LOAD MORE WORK</header>
+        </section>
+        <section id="process" class="sixthSection">
+            <h1>Our Work Process</h1>
+            <p>Was year it seasons was there form he in in them together over that,</br>
+            third sixth gathered female creeping bearing behold years.
+            </p>
+            <img src="./assets/cat.png" alt="">
+            <ul id="services" class="items">
+                <li class="item">
+                    <img src="./assets/diamond.png" alt="diamond">
+                    <h4>UI / UX DESIGN</h4>
+                    <p>Be set fourth land god darkness</br>
+                       make it wherein own.
+                    </p>
+                </li>
+                <li class="item">
+                    <img src="./assets/arc.png" alt=""bow>
+                    <h4>WEB DEVELOPMENT</h4>
+                    <p>A she'd them bring void moving</br>
+                       third she'd kind fill.
+                    </p>
+                </li>
+                <li class="item">
+                    <img src="./assets/phone.png" alt="PHONE">
+                    <h4>APP / MOBILE</h4>
+                    <p>Dominion man second sprit he, </br>
+                       earth they're creeping.
+                    </p>
+                </li>
+                <li class="item">
+                    <img src="./assets/joy.png" alt="joystick">
+                    <h4>GAME DESIGN</h4>
+                    <p>Morning his saying moveth it </br>
+                       multiply appear life be.
+                    </p>
+                </li>
+                <li class="item">
+                    <img src="./assets/plane.png" alt="plane">
+                    <h4>SEO / MARKETING</h4>
+                    <p>Give won't after land fill creeping</br>
+                       meat you, may.
+                    </p>
+                </li>
+                <li class="item">
+                    <img src="./assets/blackStar.png" alt="star">
+                    <h4>PHOTOGRAPHY</h4>
+                    <p>Creepeth one seas cattle grass</br>
+                       give moving saw give.
+                    </p>
+                </li>
+                <li class="item">
+                    <img src="./assets/magic-wand.png" alt="wand">
+                    <h4>GRAPHIC DESIGN</h4>
+                    <p>Open, great whales air rule for,</br>
+                       fourth life whales.
+                    </p>
+                </li>
+                <li class="item">
+                    <img src="./assets/paint-bucket.png" alt="bucket">
+                    <h4>ILLUSTRATIONS</h4>
+                    <p>Whales likeness hath, man kind</br>
+                       for them air two won't.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <article id="testimonials" class="quote">
+            <h1>“ Outstanding job and exceeded all expectations. It was a pleasure </br>
+                to work with them on a sizable first project and am looking</br>
+                forward to start the next one asap.”
+            </h1>
+            <p>MICHAEL HOPKINS</p>
+        </article>
+        <section id="contact" class="seventhSection">
+            <h1>NEED A PROJECT?</h1>
+            <p>Let us know what you're looking for in an agency.
+                We'll take a look and see </br>
+                if this could be the start of something beautiful.
+            </p>
+            <form action="">
+                <input placeholder="Your Name" type="text" name="name" id="name">
+                <input style="margin-left:29px;" placeholder="Your Email" type="email" name="email" id="email">
+                <input placeholder="Your Title" type="text" name="title" id="title">
+                <textarea style="resize:none; height:170px;" placeholder="Your Comment" name="comment" id="comment" cols="30" rows="10"></textarea>
+                <button style="margin-top:30px;" type="submit"> SEND MESSAGE</button>
+            </form>
+        </section>
+    </main>
+
+        <footer class="footer">
+            <aside>
+                <h3 style="color:white;">Piroll Design, Inc.</h6>
+                <p>© 2017 Piroll. All rights reserved. Designed by robiurk.</p>
+            </aside>
+
+            <div class="footerContact">
+                <p>hello@pirolltheme.com +44 987 065 908</p>
+            </div>
+            <nav class="footerNav">
+                <ul>
+                    <li>Projects</li>
+                    <li>About</li>
+                    <li>Services</li>
+                    <li>Carreer</li>
+
+                    <li>News</li>
+                    <li>Events</li>
+                    <li>Contact</li>
+                    <li>Legals</li>
+
+                    <li>Facebook</li>
+                    <li>Twitter</li>
+                    <li>Instagram</li>
+                    <li>Dribbble</li>
+                </ul>
+            </nav>
+        </footer>
+</div>
 </body>
 </html>
